--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>elm-starfighter</title>
     <link rel="stylesheet" href="./css/style.css">
-    <script src="./js/elm.js"></script>
-    <script src="./js/main.js"></script>
+    <script src="./elm.js"></script>
+    <script src="./main.js"></script>
   </head>
   <body></body>
 </html>
