🐛Fix unbuild scss

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>elm-starfighter</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./style.css">
     <script src="./elm.js"></script>
     <script src="./main.js"></script>
   </head>
